[gd_scene load_steps=27 format=2]

[ext_resource path="res://Sprites/Heart/nke1h0.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Heart/nke1i0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Heart/nke1j0.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Heart/nke1l0.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Heart/nke1k0.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Heart/nke1f0.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Heart/nke1g0.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Heart/nke1m0.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Heart/nke1p0.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Heart/nke1n0.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Heart/nke1q0.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Heart/nke1r0.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Heart/nke1s0.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Heart/nke1o0.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Heart/nke1c0.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Heart/nke1e0.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Heart/nke1d0.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Heart/nke1a0.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Heart/nke1b0.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Heart/nke1t0.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Heart/dblda0.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Heart/nke1u0.png" type="Texture" id=22]
[ext_resource path="res://Scenes/explosion.gd" type="Script" id=23]

[sub_resource type="SphereShape" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 20 ), ExtResource( 22 ) ],
"loop": true,
"name": "explode",
"speed": 15.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": false,
"name": "projectile",
"speed": 1.0
} ]

[sub_resource type="SphereShape" id=3]

[node name="explosion" type="Area"]
script = ExtResource( 23 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1.35, 0, 0, 0, 1.35, 0, 0, 0, 1.35, 0, 0, 0 )
shape = SubResource( 1 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
billboard = 2
frames = SubResource( 2 )
animation = "projectile"
playing = true

[node name="SplashDamage" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="SplashDamage"]
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_explosion_body_entered"]
[connection signal="body_entered" from="SplashDamage" to="." method="_on_SplashDamage_body_entered"]
